--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,7 +8,7 @@ on:
 env:
   PROJECT_ID: steady-tracer-392814
   REGION: europe-west3
-  REGISTRY_NAME: iot
+  REGISTRY_NAME: europe-west3-docker.pkg.dev/steady-tracer-392814/iot
   IMAGE_NAME: appjs
   IMAGE_TAG: latest
 
