--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -29,9 +29,9 @@ jobs:
 
       - name: Configure Docker to use the gcloud command-line tool as a credential helper
         run: |
-          gcloud auth configure-docker "${env.REGISTRY_NAME}"
+          gcloud auth configure-docker "${REGISTRY_NAME}"
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${env.REGISTRY_NAME}.eu.gcr.io/${env.PROJECT_ID}/${env.IMAGE_NAME}:${env.IMAGE_TAG} .
-          docker push ${env.REGISTRY_NAME}.eu.gcr.io/${env.PROJECT_ID}/${env.IMAGE_NAME}:${env.IMAGE_TAG}
+          docker build -t "${REGISTRY_NAME}/${PROJECT_ID}/${IMAGE_NAME}:${IMAGE_TAG}" .
+          docker push "${REGISTRY_NAME}/${PROJECT_ID}/${IMAGE_NAME}:${IMAGE_TAG}"
