--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,18 +20,11 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.2.0
-        with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ env.PROJECT_ID }}
-          export_default_credentials: true
-
-      - name: Configure Docker to use the gcloud command-line tool as a credential helper
+      - name: Log in to Google Cloud Artifact Registry
         run: |
-          gcloud auth configure-docker "$REGISTRY_NAME"
+          gcloud auth print-access-token | sudo docker login -u oauth2accesstoken --password-stdin "europe-west3-docker.pkg.dev"
 
-      - name: Build and Push Docker Image
+      - name: Build and Push Docker image
         run: |
-          docker build -t "$REGISTRY_NAME/$IMAGE_NAME:$IMAGE_TAG" .
-          docker push "$REGISTRY_NAME/$IMAGE_NAME:$IMAGE_TAG"
+          docker build -t "${REGISTRY_NAME}/${IMAGE_NAME}:${IMAGE_TAG}" .
+          docker push "${REGISTRY_NAME}/${IMAGE_NAME}:${IMAGE_TAG}"
