--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,9 +20,16 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      - name: Log in to Google Cloud Artifact Registry
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.2.0
+        with:
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ env.PROJECT_ID }}
+          export_default_credentials: false  # Important: Set this to false
+
+      - name: Configure Docker to use the gcloud command-line tool as a credential helper
         run: |
-          gcloud auth print-access-token | sudo docker login -u oauth2accesstoken --password-stdin "europe-west3-docker.pkg.dev"
+          gcloud auth configure-docker "${REGISTRY_NAME}"
 
       - name: Build and Push Docker image
         run: |
