--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -28,8 +28,7 @@ jobs:
           export_default_credentials: true
 
       - name: Log in to Google Cloud Artifact Registry
-        run: |
-          gcloud auth print-access-token | sudo docker login -u oauth2accesstoken --password-stdin "europe-west3-docker.pkg.dev"
+        run: gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin "europe-west3-docker.pkg.dev"
 
       - name: Build and Push Docker image
         run: |
