--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,7 +10,7 @@ env:
   REGION: europe-west3
   REGISTRY_NAME: europe-west3-docker.pkg.dev/steady-tracer-392814/iot
   IMAGE_NAME: appjs
-  IMAGE_TAG: latest
+  IMAGE_TAG: ''
 
 jobs:
   build-and-push:
@@ -32,5 +32,6 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
+          IMAGE_TAG=${{ env.IMAGE_TAG }}-${{ steps.datetime.outputs.DATETIME }}
           docker build -t "${REGISTRY_NAME}/${IMAGE_NAME}:${IMAGE_TAG}" .
           docker push "${REGISTRY_NAME}/${IMAGE_NAME}:${IMAGE_TAG}"
