--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -9,7 +9,7 @@ env:
   PROJECT_ID: steady-tracer-392814
   REGION: europe-west3
   REGISTRY_NAME: europe-west3-docker.pkg.dev/steady-tracer-392814/iot
-  IMAGE_NAME: appjs
+  IMAGE_NAME: app
   IMAGE_TAG: test
 
 jobs:
