--- a/.github/workflows/alert.yml
+++ b/.github/workflows/alert.yml
@@ -11,6 +11,7 @@ env:
   REGISTRY_NAME: europe-west3-docker.pkg.dev/steady-tracer-392814/iot
   IMAGE_NAME: alert
   IMAGE_TAG: test
+  DOCKERFILE_PATH: sub/alert.Dockerfile
 
 jobs:
   build-and-push:
@@ -37,5 +38,5 @@ jobs:
       - name: Build and Push Docker image
         run: |
           IMAGE_TAG=${{ env.IMAGE_TAG }}.${{ steps.datetime.outputs.DATETIME }}
-          docker build -t "${REGISTRY_NAME}/${IMAGE_NAME}:${IMAGE_TAG}" sub/alert.Dockerfile
+          docker build -t "${REGISTRY_NAME}/${IMAGE_NAME}:${IMAGE_TAG}" "${DOCKERFILE_PATH}"
           docker push "${REGISTRY_NAME}/${IMAGE_NAME}:${IMAGE_TAG}"
