--- a/.github/workflows/sub.yml
+++ b/.github/workflows/sub.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Build and Push Docker image
         run: |
           IMAGE_TAG=${{ env.IMAGE_TAG }}.${{ steps.datetime.outputs.DATETIME }}
-          docker build -t "${REGISTRY_NAME}/${IMAGE_NAME}:${IMAGE_TAG}" sub/Dockerfile
+          docker build -t "${REGISTRY_NAME}/${IMAGE_NAME}:${IMAGE_TAG}" Dockerfile
           docker push "${REGISTRY_NAME}/${IMAGE_NAME}:${IMAGE_TAG}"
